; ModuleID = '/home/carl/AnghaBench/zfs/lib/libzfs_core/extr_libzfs_core.c_lzc_get_bookmark_props.c'
source_filename = "/home/carl/AnghaBench/zfs/lib/libzfs_core/extr_libzfs_core.c_lzc_get_bookmark_props.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ZFS_IOC_GET_BOOKMARK_PROPS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @lzc_get_bookmark_props(i8* %0, i32** %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32**, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i32** %1, i32*** %4, align 8
  %7 = call i32* (...) @fnvlist_alloc()
  store i32* %7, i32** %6, align 8
  %8 = load i32, i32* @ZFS_IOC_GET_BOOKMARK_PROPS, align 4
  %9 = load i8*, i8** %3, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = load i32**, i32*** %4, align 8
  %12 = call i32 @lzc_ioctl(i32 %8, i8* %9, i32* %10, i32** %11)
  store i32 %12, i32* %5, align 4
  %13 = load i32*, i32** %6, align 8
  %14 = call i32 @fnvlist_free(i32* %13)
  %15 = load i32, i32* %5, align 4
  ret i32 %15
}

declare dso_local i32* @fnvlist_alloc(...) #1

declare dso_local i32 @lzc_ioctl(i32, i8*, i32*, i32**) #1

declare dso_local i32 @fnvlist_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
